--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './styles/base';
 @import './styles/typography';
+@import '../node_modules/react-dates/lib/css/_datepicker.css';
 
 
 .App {
