Add grid layout, base font sass variables, styling for header

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import './styles/base';
 @import './styles/typography';
+@import './styles/utilities';
+@import './styles/header';
+@import './styles/form';
+@import './styles/button';
 @import '../node_modules/react-dates/lib/css/_datepicker.css';
 
 
