--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,14 +3,27 @@
   font-weight: 400;
 }
 
-.heading-1 {
-  @extend %heading;
-  font-size: 4.5rem;
-  color: $color-grey-light-1;
-  line-height: 1;
+.heading-primary {
+  font-size: $font-size-primary;
+  font-family: $font-display;
 }
+.heading-secondary {
+  font-size: $font-size-secondary;
+}
+.heading-tertiary {
+  font-size: $font-size-tertiary;
+}
+.heading-quarternary {
+  font-size: $font-size-quarternary;
+}
+
 
 .margin-bottom-small { margin-bottom: 2rem; }
 .margin-bottom-medium { margin-bottom: 3rem; }
 .margin-bottom-large { margin-bottom: 4rem; }
 .margin-bottom-huge { margin-bottom: 8rem; }
+
+.margin-right-small { margin-right: 2rem; }
+.margin-right-medium { margin-right: 3rem; }
+.margin-right-large { margin-right: 4rem; }
+.margin-right-huge { margin-right: 8rem; }
