Add food list filter and foods display list styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
 @import './styles/utilities';
 @import './styles/header';
 @import './styles/form';
+@import './styles/filter';
+@import './styles/listDisplay';
+@import './styles/listItem';
 @import './styles/button';
 @import '../node_modules/react-dates/lib/css/_datepicker.css';
 
