--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -8,4 +8,4 @@
 .margin-right-large { margin-right: 4rem; }
 .margin-right-huge { margin-right: 8rem; }
 
-.flex-right-most{ margin-left: auto; }
+.flex-right-end{ margin-left: auto; }
