Add module tabs using compound components for addFood and editFood form

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import './styles/header';
 @import './styles/form';
 @import './styles/filter';
+@import './styles/tabs';
 @import './styles/listDisplay';
 @import './styles/listItem';
 @import './styles/button';
