Move all page layout (grid) into classes that appear directly in the FoodDashboardPage

--- a/src/styles/_tabs.scss
+++ b/src/styles/_tabs.scss
@@ -1,33 +1,29 @@
 .tabs {
   display: flex;
   margin-top: 2rem;
-  background-color: $color-grey-dark-3;
+  background-color: darken($color-grey-light-1, 10%);
 }
 
 .tab {
   display: inline-block;
   padding: 1rem 2rem;
   color: $color-grey-dark-2;
-  background-color: $color-grey-light-2;
+  background-color: darken($color-grey-light-1, 10%);
   cursor: pointer;
   font-family: $font-display;
   
   
   &:hover {
-    transform: translateY(-3px);
     background-color: $color-grey-light-2;
-    box-shadow: 0 1rem 2rem rgba(0,0,0, .2);
     
   }
   
   &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0,0,0, .2);
+    background-color: $color-grey-light-2;
   }
   
   &--active {
     background-color: $color-grey-light-2;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0, .2);
   }
 
   &--disabled {
@@ -35,13 +31,10 @@
     cursor: auto;
 
     &:hover {
-      transform: none;
       background-color: $color-grey-light-1;
-      box-shadow: none;
     }
 
     &:active {
-      transform: none;
       box-shadow: none;
     }
     
