Add error messages to Food Forms

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -51,5 +51,11 @@
     transform: translateY(-3.5rem);
   }
 
+  &__input:focus + &__label {
+    opacity: 1;
+    visibility: visible;
+    transform: none;
+  }
+
 
 }
