--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,7 +1,9 @@
 .form {
   
   &__row {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(5rem, 1fr));
+    grid-gap: 2rem;
 
     &:not(:last-child) {
       margin: 2rem 0;
@@ -11,19 +13,26 @@
 
   &__group {
     
-    
-    &--50 {
-      flex: 0 0  50%;
+    &--100 {
+      grid-column: auto / span 4;
     }
 
+    &--50 {
+      grid-column: auto / span 2;
+    }
+    
     &--25 {
-      flex: 0 0 25%;
+      grid-column: auto / span 1;
+    }
+
+    &--center {
+      grid-column: 4 / 5;
     }
   }
   
   &__input {
     font-size: $font-size-body;
-    width: 90%;
+    width: 100%;
     
     padding: .5rem 1rem;
 
@@ -36,6 +45,10 @@
       box-shadow: 0 1rem 2rem rgba(0,0,0, .1);
       border-bottom: 3px solid $color-grey-dark-3;
     }
+
+    &--invalid {
+      border-bottom: 3px solid red;
+    }
     
   }
 
@@ -43,6 +56,7 @@
     display: block;
     transition: all .3s;
     margin-left: 1rem;
+    transform: translateY(-6rem);
   }
 
   &__input:placeholder-shown + &__label {
@@ -54,7 +68,7 @@
   &__input:focus + &__label {
     opacity: 1;
     visibility: visible;
-    transform: none;
+    transform: translateY(-6rem);
   }
 
 
