Add pane styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import './styles/form';
 @import './styles/filter';
 @import './styles/tabs';
+@import './styles/pane';
 @import './styles/listDisplay';
 @import './styles/listItem';
 @import './styles/button';
