Add panes for edit log and some fixed edit log being selected on edit button click

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,9 @@
 @import './styles/utilities';
 @import './styles/header';
 @import './styles/form';
-@import './styles/filter';
+@import './styles/foodsFilter';
+@import './styles/logsFilter';
+@import './styles/logList';
 @import './styles/tabs';
 @import './styles/pane';
 @import './styles/listDisplay';
