--- a/src/styles/_listDisplay.scss
+++ b/src/styles/_listDisplay.scss
@@ -7,6 +7,7 @@
   }
 
   &__list {
+    margin-bottom: 2rem;
 
     &-header {
       margin-bottom: 2rem;
@@ -29,6 +30,10 @@
   
     &-table {
       display: flex;
+      
+      &:not(:last-child) {
+        margin-bottom: 1rem;
+      }
 
       &--even {
         & > :first-child {
