Add overrides for react dates styles to make it fit in

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import './styles/base';
 @import './styles/typography';
 @import './styles/utilities';
+@import './styles/react_dates_overrides';
 @import './styles/header';
 @import './styles/form';
 @import './styles/foodsFilter';
