--- a/src/styles/_logsFilter.scss
+++ b/src/styles/_logsFilter.scss
@@ -2,7 +2,7 @@
   grid-column: center-start / center-end;
   justify-content: center;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 2rem;
 
   background-color: $color-grey-dark-2;
   display: flex;
