--- a/src/styles/_logList.scss
+++ b/src/styles/_logList.scss
@@ -16,10 +16,11 @@
     display: flex;
     position: absolute;
     right: 0;
-    top: 0;
+    top: .5rem;
   }
 
   &__btn {
+    margin-left: auto;
     padding: 0;
   }
 }
