Add media queries for more responsive design

--- a/src/styles/_logFoodListDisplay.scss
+++ b/src/styles/_logFoodListDisplay.scss
@@ -3,7 +3,7 @@
   &__header {
     color: $color-grey-dark-1;
     text-align: center;
-    margin: 2rem;
+    margin-bottom: 2rem;
   }
 
   &__list {
