--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -25,6 +25,11 @@ $font-size-secondary: $font-size-body * 1.64;   //18px
 $font-size-tertiary: $font-size-body * 1.45;    //16px
 $font-size-quarternary: $font-size-body * 1.18; //13px
 
+// RESPONSIVE BREAKPOINTS
+$bp-large: 62.5em; // 1000px
+$bp-medium: 53.125em; // 850px
+$bp-small: 40em; // 640px
+
 *,
 *::before,
 *::after {
@@ -36,6 +41,10 @@ $font-size-quarternary: $font-size-body * 1.18; //13px
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;   // 8px/16px = 50% -> 1rem = 8px
+  }
 }
 
 body {
@@ -63,13 +72,22 @@ body {
 .section {
   &__full-start-end {
     grid-column: full-start / full-end;
+
   }
 
   &__center-start-end {
     grid-column: center-start / center-end;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: full-start / full-end;
+    }
   }
 
   &__center-6-start-end {
     grid-column: col-start 2 / col-end 7;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: center-start / center-end;
+    }
   }
 }
