--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -29,6 +29,7 @@ $font-size-quarternary: $font-size-body * 1.18; //13px
 $bp-large: 62.5em; // 1000px
 $bp-medium: 53.125em; // 850px
 $bp-small: 40em; // 640px
+$bp-smaller: 28.75em; // 460px
 
 *,
 *::before,
@@ -44,6 +45,15 @@ html {
 
   @media only screen and (max-width: $bp-large) {
     font-size: 50%;   // 8px/16px = 50% -> 1rem = 8px
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 43.75%;   // 7px/16px = 43.75% -> 1rem = 7px
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 43.75%;   // 7px/16px = 43.75% -> 1rem = 7px
+  }
+  @media only screen and (max-width: $bp-smaller) {
+    font-size: 37.5%;   // 6px/16px = 37.5% -> 1rem = 6px
   }
 }
 
@@ -88,6 +98,10 @@ body {
 
     @media only screen and (max-width: $bp-medium) {
       grid-column: center-start / center-end;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-column: full-start / full-end;
     }
   }
 }
