--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -15,6 +15,10 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1rem;
+    }
   }
 
   &:hover {
