--- a/src/styles/_foodsFilter.scss
+++ b/src/styles/_foodsFilter.scss
@@ -9,6 +9,10 @@
 
   &__search {
     flex: 0 0 50%;
+
+    @media only screen and (max-width: $bp-small) {
+      flex: 0 0 40%;
+    }
     
   }
 
@@ -26,6 +30,7 @@
     margin-left: 1rem;
     height: 3rem;
     display: flex; 
+
   }
   
   &__select {
@@ -33,6 +38,11 @@
     font-size: $font-size-quarternary;
     background-color: $color-grey-light-3;
     border: none;
+    
+    @media only screen and (max-width: $bp-small) {
+      font-size: $font-size-body;
+      width: 20%;
+    }
   }
 
   &__pages {
