--- a/src/styles/_logsFilter.scss
+++ b/src/styles/_logsFilter.scss
@@ -24,7 +24,13 @@
   &__options {
     margin-left: 1rem;
     height: 3rem;
-    display: flex; 
+    display: flex;
+
+    @media only screen and (max-width: $bp-smaller) {
+      font-size: $font-size-body;
+      flex: 0 0 15%;
+    }
+    
   }
   
   &__select {
@@ -32,6 +38,11 @@
     font-size: $font-size-quarternary;
     background-color: $color-grey-light-3;
     border: none;
+
+    @media only screen and (max-width: $bp-smaller) {
+      font-size: $font-size-body;
+      width: 40%;
+    }
   }
 
   &__pages {
