--- a/src/styles/_react_dates_overrides.scss
+++ b/src/styles/_react_dates_overrides.scss
@@ -2,6 +2,10 @@
   @media only screen and (max-width: $bp-medium) {
     width: 100px;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    width: 75px;
+  }
 }
 
 .DateInput_input {
