Refactor EditLog by moving components to proper folders to better represent structure

--- a/src/components/EditLog/CurrentLog/CurrentLogFoodListContainer/CurrentLogFoodList/CurrentLogFoodList.scss
+++ b/src/components/EditLog/CurrentLog/CurrentLogFoodListContainer/CurrentLogFoodList/CurrentLogFoodList.scss
@@ -1,6 +1,6 @@
-@import '../../../../styles/base';
+@import '../../../../../styles/base';
 
-.logFoodListDisplay {
+.currentLogFoodList {
 
   &__header {
     color: $color-grey-dark-1;
