--- a/src/components/FoodForm/FoodForm.scss
+++ b/src/components/FoodForm/FoodForm.scss
@@ -1,4 +1,6 @@
-.form {
+@import '../../styles/base';
+
+.foodForm {
   
   &__row {
     display: grid;
@@ -9,6 +11,11 @@
       margin: 2rem 0;
       
     }
+  }
+
+  &__title {
+    text-align: center;
+    margin-bottom: 3rem;
   }
 
   &__group {
