--- a/src/styles/_currentLog.scss
+++ b/src/styles/_currentLog.scss
@@ -60,4 +60,45 @@
   &__radio-input:checked ~ &__radio-label &__radio-button::after {
     opacity: 1;
   }
+
+  &__input {
+    font-size: $font-size-body;
+    width: 100%;
+    
+    padding: .5rem 1rem;
+
+    border: none;
+    border-bottom: 3px solid transparent;
+    display: block;
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(0,0,0, .1);
+      border-bottom: 3px solid $color-grey-dark-3;
+    }
+
+    &--invalid {
+      border-bottom: 3px solid red;
+    }
+    
+  }
+
+  &__label {
+    display: block;
+    transition: all .3s;
+    margin-left: 1rem;
+    transform: translateY(-6rem);
+  }
+
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-3.5rem);
+  }
+
+  &__input:focus + &__label {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(-6rem);
+  }
 }
