Move component specific styles into the components folder

--- a/src/components/FoodListFilters/FoodsListFilters.scss
+++ b/src/components/FoodListFilters/FoodsListFilters.scss
@@ -1,4 +1,6 @@
-.foodsFilter {
+@import '../../styles/base';
+
+.foodsListFilters {
   grid-column: center-start / center-end;
   justify-content: center;
   align-items: center;
