--- a/src/components/FoodForm/FoodForm.scss
+++ b/src/components/FoodForm/FoodForm.scss
@@ -32,8 +32,24 @@
       grid-column: auto / span 1;
     }
 
+    &--center-left {
+      grid-column: 2 / 3;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+    }
+    &--center-right {
+      grid-column: -3 / -2;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+    }
+
     &--right {
-      grid-column: 4 / 5;
+      grid-column: -2 / -1;
+      display: grid;
+      justify-content: center;
+      align-items: center;
     }
   }
   
