--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -36,6 +36,10 @@
     padding: 1rem 2rem;
   }
 
+  &--primary {
+    padding: 2rem 4rem;
+  }
+
   &--disabled {
     opacity: .5;
     cursor: auto;
